--- a/.github/actions/build-sdks/action.yml
+++ b/.github/actions/build-sdks/action.yml
@@ -91,7 +91,8 @@ runs:
         apt-get update
         DEBIAN_FRONTEND=noninteractive apt-get install -y mesa-common-dev libegl1-mesa-dev libgl1-mesa-dev \
                                                           libglu1-mesa-dev freeglut3-dev libxcursor-dev \
-                                                          libfreeimage-dev libfreetype-dev libfontconfig-dev
+                                                          libfreeimage-dev libfreetype-dev libfontconfig-dev \
+                                                          git patch 
 
     # - - -
 
