--- a/.github/actions/build-ocp/action.yml
+++ b/.github/actions/build-ocp/action.yml
@@ -71,9 +71,10 @@ runs:
       run: |
         apt-get update
         # do not use freeimage freetype fontconfig from anaconda. Prevents from manylinux_2_31_x86_64 wheel
-        apt-get install -y mesa-common-dev libegl1-mesa-dev libgl1-mesa-dev \
-                           libglu1-mesa-dev freeglut3-dev libxcursor-dev \
-                           libfreeimage-dev libfreetype-dev libfontconfig-dev
+        DEBIAN_FRONTEND=noninteractive apt-get install -y mesa-common-dev libegl1-mesa-dev libgl1-mesa-dev \
+                                                          libglu1-mesa-dev freeglut3-dev libxcursor-dev \
+                                                          libfreeimage-dev libfreetype-dev libfontconfig-dev \
+                                                          git patch clang
 
     # - - -
 
