install build-essentials (2)

--- a/.github/actions/build-sdks/action.yml
+++ b/.github/actions/build-sdks/action.yml
@@ -92,7 +92,7 @@ runs:
         DEBIAN_FRONTEND=noninteractive apt-get install -y mesa-common-dev libegl1-mesa-dev libgl1-mesa-dev \
                                                           libglu1-mesa-dev freeglut3-dev libxcursor-dev \
                                                           libfreeimage-dev libfreetype-dev libfontconfig-dev \
-                                                          git patch clang build-essentials
+                                                          git patch clang build-essential
     # - - -
 
     - name: (Mac, Windows) Install dependencies
