--- a/.github/actions/build-sdks/action.yml
+++ b/.github/actions/build-sdks/action.yml
@@ -54,6 +54,18 @@ runs:
 
     # - - -
 
+    - name: (Ubuntu) Install dependencies
+      if: runner.os == 'Linux' && steps.cache-occt-restore.outputs.cache-hit != 'true'
+      shell: bash -l {0}
+      run: |
+        # do not use freeimage freetype fontconfig from anaconda. Prevents from manylinux_2_31_x86_64 wheel
+        apt-get update
+        DEBIAN_FRONTEND=noninteractive apt-get install -y \
+          mesa-common-dev libegl1-mesa-dev libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev libxcursor-dev \
+          libfreeimage-dev libfreetype-dev libfontconfig-dev git patch clang build-essential ca-certificates  
+          
+    # - - - (micromamba needs ca-certificates for ubuntu)
+
     - name: Set up Python ${{ inputs.python-version }} via micromamba
       if: steps.cache-occt-restore.outputs.cache-hit != 'true'
       uses: mamba-org/setup-micromamba@v2
@@ -77,22 +89,6 @@ runs:
         echo "cpu_count=$cpu_count" >> $GITHUB_OUTPUT
         echo "=> Using $cpu_count CPUs"
 
-    # - - - - - - - - - - - - - - - - - - - - -
-    # Install toolchain if needed
-    # - - - - - - - - - - - - - - - - - - - - -
-
-    # - - -
-
-    - name: (Ubuntu) Install dependencies
-      if: runner.os == 'Linux' && steps.cache-occt-restore.outputs.cache-hit != 'true'
-      shell: bash -l {0}
-      run: |
-        # do not use freeimage freetype fontconfig from anaconda. Prevents from manylinux_2_31_x86_64 wheel
-        apt-get update
-        DEBIAN_FRONTEND=noninteractive apt-get install -y mesa-common-dev libegl1-mesa-dev libgl1-mesa-dev \
-                                                          libglu1-mesa-dev freeglut3-dev libxcursor-dev \
-                                                          libfreeimage-dev libfreetype-dev libfontconfig-dev \
-                                                          git patch clang build-essential
     # - - -
 
     - name: (Mac, Windows) Install dependencies
