--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -13,6 +13,7 @@ env:
 #  VTK313_URL: https://github.com/CadQuery/ocp-build-system/releases/download/v7.8.1.0-dev
 
 jobs:
+
   # ================================================================================
   # Build SDKs for OCCT and VTK
   # ================================================================================
@@ -51,8 +52,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: ["macos-13", "macos-15", "windows-2022"]
-        os: ["macos-13", "macos-15"]
+        os: ["macos-13", "macos-15", "windows-2022"]
         # python-version: ["3.10", "3.11", "3.12", "3.13"]
         python-version: ["3.13"]
         use-vtk: ["vtk", "novtk"]
@@ -69,12 +69,12 @@ jobs:
             vtk-prefix: ""
             sed-i: "gsed -i"
             shells: "bash"
-          # - os: "windows-2022"
-          #   vtk-libs: "vtk*.dll"
-          #   vtk-suffix: "/"
-          #   vtk-prefix: "Library/"
-          #   sed-i: "sed -i"
-          #   shells: "bash cmd.exe"
+          - os: "windows-2022"
+            vtk-libs: "vtk*.dll"
+            vtk-suffix: "/"
+            vtk-prefix: "Library/"
+            sed-i: "sed -i"
+            shells: "bash cmd.exe"
     steps:
       - uses: actions/checkout@v4
       - name: Build SDKs
@@ -105,8 +105,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: ["macos-15", "ubuntu-22.04", "windows-2022"]
-        os: ["macos-15", "ubuntu-22.04"]
+        os: ["macos-15", "ubuntu-22.04", "windows-2022"]
         python-version: ["3.13"]
         use-vtk: ["vtk"]
 
@@ -115,8 +114,8 @@ jobs:
             sed-i: "gsed -i"
           - os: "ubuntu-22.04"
             sed-i: "sed -i"
-          # - os: "windows-2022"
-          #   sed-i: "sed -i"
+          - os: "windows-2022"
+            sed-i: "sed -i"
 
     steps:
       - uses: actions/checkout@v4
@@ -172,8 +171,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: ["macos-13", "macos-15", "windows-2022"]
-        os: ["macos-13", "macos-15"]
+        os: ["macos-13", "macos-15", "windows-2022"]
         # python-version: ["3.10", "3.11", "3.12", "3.13"]
         python-version: ["3.13"]
         use-vtk: ["vtk", "novtk"]
@@ -231,8 +229,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: ["macos-13", "macos-15", "ubuntu-22.04", "windows-2022"]
-        os: ["macos-13", "macos-15", "ubuntu-22.04"]
+        os: ["macos-13", "macos-15", "ubuntu-22.04", "windows-2022"]
         # python-version: ["3.10", "3.11", "3.12", "3.13"]
         python-version: ["3.13"]
         use-vtk: ["vtk", "novtk"]
