--- a/.github/actions/build-sdks/action.yml
+++ b/.github/actions/build-sdks/action.yml
@@ -74,7 +74,7 @@ runs:
         log-level: warning
         init-shell: ${{ inputs.shells }}
         cache-environment: true
-        cache-environment-key: environment-${{ inputs.python-version }}-%{{ inputs.os }}-${{ inputs.use-vtk }}
+        cache-environment-key: environment-${{ inputs.python-version }}-${{ inputs.os }}-${{ inputs.use-vtk }}
 
     # - - -
 
