fix missing line extender

--- a/.github/actions/build-ocp-source/action.yml
+++ b/.github/actions/build-ocp-source/action.yml
@@ -124,7 +124,7 @@ runs:
               -DPython3_ROOT_DIR=$CONDA_PREFIX \
               -DPython_FIND_VIRTUALENV=ONLY \
               -DPython3_FIND_VIRTUALENV=ONLY \
-              -DN_PROC=${{ steps.cpu-count.outputs.cpu_count }}
+              -DN_PROC=${{ steps.cpu-count.outputs.cpu_count }} \
               -B new -S . -G Ninja
         
         cd new
@@ -149,7 +149,7 @@ runs:
               -DPython3_FIND_VIRTUALENV=ONLY \
               -DOCCT_LIB_DIR=./occt/Library/bin/\*.dll \
               -DPLATFORM=Windows \
-              -DN_PROC=${{ steps.cpu-count.outputs.cpu_count }}
+              -DN_PROC=${{ steps.cpu-count.outputs.cpu_count }} \
               -B new -S . -G Ninja
         
         cd new
