--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -77,10 +77,10 @@ jobs:
             shells: "bash cmd.exe"
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: debug
         run: |
-          echo "RUNNER under Ubuntu"
+          echo "RUNNER"
           echo "pwd              = $(pwd)"
           echo "github.workspace = ${{ github.workspace }}"
 
