set apt-get to quiet

--- a/.github/actions/build-sdks/action.yml
+++ b/.github/actions/build-sdks/action.yml
@@ -59,8 +59,8 @@ runs:
       shell: bash -l {0}
       run: |
         # do not use freeimage freetype fontconfig from anaconda. Prevents from manylinux_2_31_x86_64 wheel
-        apt-get update
-        DEBIAN_FRONTEND=noninteractive apt-get install -y \
+        apt-get update -qq
+        DEBIAN_FRONTEND=noninteractive apt-get install -qq -y \
           mesa-common-dev libegl1-mesa-dev libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev libxcursor-dev \
           libfreeimage-dev libfreetype-dev libfontconfig-dev git patch clang build-essential ca-certificates  
           
@@ -92,7 +92,7 @@ runs:
         echo "CONTAINER under Ubuntu"
         echo "pwd              = $(pwd)"
         echo "github.workspace = ${{ github.workspace }}"
-
+        ls -lR . | grep -v total | grep -v rw
 
     # - - -
 
