--- a/.github/actions/build-ocp-source/action.yml
+++ b/.github/actions/build-ocp-source/action.yml
@@ -36,8 +36,8 @@ runs:
         set -o pipefail
 
         # native container needs sudo
-        sudo apt-get update 
-        sudo apt-get install \
+        sudo apt-get update -qq 
+        sudo apt-get install -qq \
           ca-certificates g++-13 mesa-common-dev libegl1-mesa-dev libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev
 
     # - - - (micromamba needs ca-certificates for ubuntu)
