--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -33,6 +33,15 @@ jobs:
         use-vtk: ["vtk", "novtk"]
     steps:
       - uses: actions/checkout@v4
+      
+      - name: debug
+        shell: bash -l {0}
+        run: |
+          echo "RUNNER"
+          echo "pwd              = $(pwd)"
+          echo "github.workspace = ${{ github.workspace }}"
+          ls -lR . | grep -v total | grep -v rw
+
       - name: Build SDKs
         id: build-sdks
         uses: ./.github/actions/build-sdks
@@ -79,6 +88,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: debug
+        shell: bash -l {0}
         run: |
           echo "RUNNER"
           echo "pwd              = $(pwd)"
