--- a/.github/actions/test-ocp/action.yml
+++ b/.github/actions/test-ocp/action.yml
@@ -29,8 +29,8 @@ runs:
         set -u
         set -o pipefail
 
-        apt-get update -qq  
-        DEBIAN_FRONTEND=noninteractive apt-get install -qq ca-certificates
+        sudo apt-get update -qq  
+        sudo DEBIAN_FRONTEND=noninteractive apt-get install -qq ca-certificates
 
     # - - -
     
