change restricted execution approach (2)

--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -53,23 +53,24 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["macos-13", "macos-15", "windows-2022"]
+        # os: ["macos-13", "macos-15", "windows-2022"]
+        os: ["windows-2022"]
         # python-version: ["3.10", "3.11", "3.12", "3.13"]
         python-version: ["3.13"]
         use-vtk: ["vtk", "novtk"]
         include:
-          - os: "macos-15"
-            vtk-libs: ".dylibs/libvtk*.dylib"
-            vtk-suffix: "/"
-            vtk-prefix: ""
-            sed-i: "gsed -i"
-            shells: "bash"
-          - os: "macos-13"
-            vtk-libs: ".dylibs/libvtk*.dylib"
-            vtk-suffix: "/"
-            vtk-prefix: ""
-            sed-i: "gsed -i"
-            shells: "bash"
+          # - os: "macos-15"
+          #   vtk-libs: ".dylibs/libvtk*.dylib"
+          #   vtk-suffix: "/"
+          #   vtk-prefix: ""
+          #   sed-i: "gsed -i"
+          #   shells: "bash"
+          # - os: "macos-13"
+          #   vtk-libs: ".dylibs/libvtk*.dylib"
+          #   vtk-suffix: "/"
+          #   vtk-prefix: ""
+          #   sed-i: "gsed -i"
+          #   shells: "bash"
           - os: "windows-2022"
             vtk-libs: "vtk*.dll"
             vtk-suffix: "/"
