--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -134,7 +134,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["macos-15", "windows-2022"]
+        # os: ["macos-15", "windows-2022"]
+        os: ["windows-2022"]
         python-version: ["3.13"]
         include:
           - os: "macos-15"
