--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -256,7 +256,7 @@ jobs:
       fail-fast: false
       matrix:
         # os: ["macos-13", "macos-15", "ubuntu-22.04", "windows-2022"]
-        os: ["ubuntu-22.04"]
+        os: ["ubuntu-22.04", "windows-2022"]
         # python-version: ["3.10", "3.11", "3.12", "3.13"]
         python-version: ["3.13"]
         use-vtk: ["vtk", "novtk"]
